# certc

./: LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  Home.tsx  store.ts  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cert.rs  logger.rs  main.rs
src/create_cert/: creat_cert.tsx
src/version_indication/: version_indication.tsx
