[package]
name = "app"
version = "0.0.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.7", features = ["api-all"] }
rcgen = "0.9.2"
rsa = "0.6.1"
rand = "0.8.5"
pem = "1.0.2"
ring = "0.16.20"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt", "std", "time"] }
time = {version = "0.3.9", features = ["local-offset", "macros"] }
tracing-appender = "0.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
